refactor: optimize code